* add heathcheck for nginx service (startup probe) * extract route name to constant (RouteNames) for reusage * update packages
